# core-py

./: .cfignore  .env.example  .gitignore  .pre-commit-config.yaml  CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_NOTES.md  Procfile  README.md  app.json  pyproject.toml  requirements-worker.txt  requirements.txt  ruff.toml  run.py  worker.py  wrangler.toml
.github/: copilot-instructions.md
.github/instructions/: index.instructions.md  python.instructions.md
.github/workflows/: deploy-cloudflare-workers.yml.example
app/: engine.py  logging_config.py  middleware.py
app/business/: block.py  extension.md  extension.py  relation.py  root.py  sink.py
app/business/resolver/: __init__.py  image.py  main.py  text.py  video.py  webpage.py
app/business/source/: __init__.py  main.py  webpage.py
app/business/storage/: __init__.py  main.py
app/libs/: ai.py
app/routes/: block.py  extension.py  relation.py
app/schemas/: block.py  relation.py  root.py  storage.py
docs/: heroku_deployment.md  logging.md  logging_example.md  organizing_info.md  resolver.md  todo.md
extensions/: README.md
extensions/github/: __init__.py  api.py  pyproject.toml  schemas.py  source.py
extensions/learn_english/: __init__.py  pyproject.toml  resolver.py  schema.py
extensions/mail/: README.md  __init__.py  example_usage.py  imap_source.py  pyproject.toml  resolver.py  schema.py
extensions/telegram/: README.md  __init__.py  pyproject.toml  resolver.py  schema.py  source.py
extensions/twitter/: __init__.py  api.py  bookmark.py  pyproject.toml  resolver.py  schema.py
migrations/: env.py
migrations/versions/: 02e59d888a38_init.py  034e741f97a2_embeddings_cascade.py  671679032964_embeddings_add_updated_at.py  c5_add_github_extension.py
tests/: test_database_url.py  test_logging.py
tests/extensions/: test_github.py  test_mail.py  test_telegram.py
utils/: types_.py
