[project]
name = "inkcre-ext-github"
version = "0.1.0"
description = "GitHub extension for inkcre"
authors = [
    {name = "Jules", email = "jules@example.com"},
]
dependencies = ["PyGithub>=1.59.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
