[project]
name = "learn_english"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
