[project]
name = "inkcre-ext-learn_english"
version = "0.1.0"
description = "InKCre extension of Learn English"
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[inkcre-ext]
id = "learn_english"
nickname = "Learn English"